@@ -76,7 +76,7 @@
 <tr>
 <td> 95</td><td> 1</td><td>TUMOR_3V</td><td>tumor3</td><td>Tumor marker 3</td></tr>
 <tr>
-<td> 96</td><td> 3</td><td>CSTUMSIZ</td><td>cstumsiz</td><td>CS Tumor size</td></tr>
+<td> 96</td><td> 3</td><td>CSTUMSIZ</td><td>cstumsiz</td><td>Collaborative Stage (CS) Tumor Size</td></tr>
 <tr>
 <td> 99</td><td> 3</td><td>CSEXTEN</td><td>csexten</td><td>CS Extension</td></tr>
 <tr>
@@ -128,12 +128,6 @@
 <tr>
 <td>166</td><td> 1</td><td>NO_SURG</td><td>nosurg</td><td>Reason no cancer-directed surgery</td></tr>
 <tr>
-<td>167</td><td> 1</td><td>RADIATN</td><td>radiatn</td><td>Radiation</td></tr>
-<tr>
-<td>168</td><td> 1</td><td>RAD_BRN</td><td>radbrn</td><td>Radiation to Brain and/or CNS</td></tr>
-<tr>
-<td>169</td><td> 1</td><td>RAD_SURG</td><td>radsurg</td><td>Radiation sequence with surgery</td></tr>
-<tr>
 <td>170</td><td> 2</td><td>SS_SURG</td><td>sssurg</td><td>Site specific surgery (1983-1997)</td></tr>
 <tr>
 <td>174</td><td> 1</td><td>SURGSCOP</td><td>surgscop</td><td>Scope of lymph node surgery 98-02</td></tr>
@@ -162,7 +156,7 @@
 <tr>
 <td>228</td><td> 2</td><td>HISTRECB</td><td>histrecb</td><td>Brain recode</td></tr>
 <tr>
-<td>230</td><td> 3</td><td>cs0204schema</td><td>cs0204schema</td><td>CS Schema v0204</td></tr>
+<td>230</td><td> 3</td><td>CS0204SCHEMA</td><td>cs0204schema</td><td>CS Schema v0204</td></tr>
 <tr>
 <td>233</td><td> 1</td><td>RAC_RECA</td><td>racreca</td><td>Race recode A</td></tr>
 <tr>
@@ -208,13 +202,13 @@
 <tr>
 <td>276</td><td> 1</td><td>CSMTEVAL</td><td>csmteval</td><td>CS Mets Eval</td></tr>
 <tr>
-<td>277</td><td> 1</td><td>intprim</td><td>intprim</td><td>Primary by International Rules</td></tr>
+<td>277</td><td> 1</td><td>INTPRIM</td><td>intprim</td><td>Primary by International Rules</td></tr>
 <tr>
-<td>278</td><td> 1</td><td>erstatus</td><td>erstatus</td><td>ER Status Recode Breast Cancer (1990+)</td></tr>
+<td>278</td><td> 1</td><td>ERSTATUS</td><td>erstatus</td><td>ER Status Recode Breast Cancer (1990+)</td></tr>
 <tr>
-<td>279</td><td> 1</td><td>prstatus</td><td>prstatus</td><td>PR Status Recode Breast Cancer (1990+)</td></tr>
+<td>279</td><td> 1</td><td>PRSTATUS</td><td>prstatus</td><td>PR Status Recode Breast Cancer (1990+)</td></tr>
 <tr>
-<td>280</td><td> 2</td><td>csschema</td><td>csschema</td><td>CS Schema - AJCC 6th Edition</td></tr>
+<td>280</td><td> 2</td><td>CSSCHEMA</td><td>csschema</td><td>CS Schema - AJCC 6th Edition</td></tr>
 <tr>
 <td>282</td><td> 3</td><td>CS8SITE</td><td>cs8site</td><td>Cs Site-specific Factor 8</td></tr>
 <tr>
@@ -230,9 +224,9 @@
 <tr>
 <td>300</td><td> 1</td><td>VASINV</td><td>vasin</td><td>Lymph-vascular Invasion (2004+)</td></tr>
 <tr>
-<td>301</td><td> 4</td><td>srv_time_mon</td><td>surv</td><td>Survival months</td></tr>
+<td>301</td><td> 4</td><td>SRV_TIME_MON</td><td>surv</td><td>Survival months</td></tr>
 <tr>
-<td>305</td><td> 1</td><td>srv_time_mon_flag</td><td>srvtimemonflag</td><td>Survival months flag</td></tr>
+<td>305</td><td> 1</td><td>SRV_TIME_MON_FLAG</td><td>srvtimemonflag</td><td>Survival months flag</td></tr>
 <tr>
 <td>311</td><td> 1</td><td>INSREC_PUB</td><td>insrecpub</td><td>Insurance Recode (2007+)</td></tr>
 <tr>
@@ -258,9 +252,9 @@
 <tr>
 <td>338</td><td> 3</td><td>CS12SITE</td><td>cs12site</td><td>CS Site-Specific Factor 12</td></tr>
 <tr>
-<td>341</td><td> 1</td><td>her2</td><td>her2</td><td>Derived HER2 Recode (2010+)</td></tr>
+<td>341</td><td> 1</td><td>HER2</td><td>her2</td><td>Derived HER2 Recode (2010+)</td></tr>
 <tr>
-<td>342</td><td> 1</td><td>brst_sub</td><td>brstsub</td><td>Breast Subtype (2010+)</td></tr>
+<td>342</td><td> 1</td><td>BRST_SUB</td><td>brstsub</td><td>Breast Subtype (2010+)</td></tr>
 <tr>
 <td>348</td><td> 1</td><td>ANNARBOR</td><td>annarbor</td><td>Lymphoma - Ann Arbor Stage (1983+)</td></tr>
 <tr>
@@ -277,8 +271,19 @@
 <td>355</td><td> 2</td><td>N_VALUE</td><td>nvalue</td><td>N value - based on AJCC 3rd (1988-2003)</td></tr>
 <tr>
 <td>357</td><td> 2</td><td>M_VALUE</td><td>mvalue</td><td>M value - based on AJCC 3rd (1988-2003)</td></tr>
+<tr>
+<td>359</td><td> 2</td><td>MALIGCOUNT</td><td>maligcount</td><td>Total number of in situ/malignant tumors for patient</td></tr>
+<tr>
+<td>361</td><td> 2</td><td>BENBORDCOUNT</td><td>benbordcount</td><td>Total number of benign/borderline tumors for patient</td></tr>
+<tr>
+<td>363</td><td> 1</td><td>RADIATNR</td><td>radiatn</td><td>Radiation Recode</td></tr>
+<tr>
+<td>364</td><td> 1</td><td>RAD_BRNR</td><td>radbrnr</td><td>Radiation to Brain or CNS Recode (1988-1997)</td></tr>
+<tr>
+<td>365</td><td> 1</td><td>RAD_SURG</td><td>radsurg</td><td>Radiation sequence with surgery</td></tr>
+<tr>
+<td>366</td><td> 1</td><td>CHEMO_RX_REC</td><td>chemo</td><td>Chemotherapy recode (yes, no/unk)</td></tr>
 </table>
 
-<br/>
-
+<br/><br/><font size="-2">(Page generated on Mon Nov 13 11:04:12 2017 by <a href="http://www.embl.de/~gpau/hwriter/index.html">hwriter</a> 1.3.2)</font><br/>
 </body></html>
