@@ -1,7 +1,7 @@
 \name{getFields}
 \alias{getFields}
-\title{ Get fields from SEER SAS file}
-\description{ Converts the SAS file in the SEER \file{incidence} directory into a data frame in R.}
+\title{Get fields from SEER SAS file}
+\description{Converts the SAS file in the SEER \file{incidence} directory into a data frame in R.}
 \usage{getFields(seerHome="~/data/SEER")}
 
 \arguments{
@@ -13,7 +13,7 @@ a data frame in R that contains all of the SEER fields. This data frame describe
 terms of their names (short and long forms), their starting points, and their widths.}
 
 \value{A data frame with one row for each field and columns that contain corresponding 
-starting positions, widths, short names, and expansions thereof.}
+starting positions, widths, sas names, short names, and expansions thereof.}
 
 \author{Tom Radivoyevitch (\email{radivot@ccf.org}) }
 \seealso{\code{\link{SEERaBomb-package}, \link{mkSEER}, \link{pickFields}} }
