@@ -3,6 +3,8 @@ CHANGES IN VERSION 2017.3 (Third version working with SEER data of 2017)
 
 NEW FEATURES
 
+    o desc field of getFields() is now var_label() in mkSEER() output (depends on R package labelled)
+    o added sas names to output of getFields and pickField
     o shifted dependence from XLConnect to openxlsx to get rid of rJava dependence  
     o mapCODs  maps COD integer codes to strings in CODS     
     o p2s generates times between primary/first and second cancers, at the individual level     
